# auto_meta

./: .gitignore  README.md  command  gpu_test.py  project_build.sh  ros1_bridge_env_setup.sh  ros2_terminal_setup.sh  sat.cpp
VehicleStartUI/: res.qrc  widget.cpp  widget.ui
VehicleStartUI/ui_code/: VehicleStartUI.pro  widget.cpp  widget.h  widget.ui
specifications/: .~U使用及配置说明.doc  油门刹车开度对应加速度.xlsx
src/auxiliar_tools/custom_interfaces/: CMakeLists.txt  package.xml
src/auxiliar_tools/key_board_monitor/: package.xml  setup.cfg  setup.py
src/auxiliar_tools/key_board_monitor/key_board_monitor/: key_board_monitor.py
src/auxiliar_tools/launch_manager/: CMakeLists.txt  package.xml
src/auxiliar_tools/launch_manager/config/: highway_path_planning_with_prediction.yaml  lattice_planner.yaml  map_path.yaml  mpc_parameters_configuration_dynamics_coupled.yaml
src/auxiliar_tools/safety_mechanism/: package.xml  setup.cfg  setup.py
src/auxiliar_tools/tutorial_interfaces/: CMakeLists.txt  package.xml
src/auxiliar_tools/visualization/: CMakeLists.txt  package.xml
src/auxiliar_tools/visualization/config/: car_disp.rviz  car_disp_o.rviz  map_path.yaml
src/auxiliar_tools/visualization/include/visualization/: global_path_visualization.h
src/auxiliar_tools/visualization/launch/: vehicle_path_visualization_rviz_launch.py
src/auxiliar_tools/visualization/src/: global_path_visualization.cpp  host_vehicle_visualization.cpp
src/auxiliar_tools/visualization/urdf/: host_vehicle.urdf  nezha.STL
src/carla_ros_bridge/docs/: ros_installation_ros1.md  ros_installation_ros2.md
src/chasis_modules/chassis_communication/: package.xml  setup.cfg  setup.py
src/chasis_modules/chassis_msg/: CMakeLists.txt  package.xml
src/chasis_modules/cpp_pubsub/: CMakeLists.txt  package.xml
src/chasis_modules/gear_control/: package.xml  setup.cfg  setup.py
src/chasis_modules/matrix_interfaces/: CMakeLists.txt  package.xml
src/chasis_modules/matrix_vehicle_chassis_communication/: CMakeLists.txt  package.xml
src/chasis_modules/matrix_vehicle_chassis_communication/src/: matrix_chassis_rec_send.cpp  publisher_test.cpp
src/control_module/lqr_pid_trajectory_tracking/: CMakeLists.txt  package.xml
src/control_module/lqr_pid_trajectory_tracking/config/: lqr_pid_parameters_configuration.yaml
src/control_module/lqr_pid_trajectory_tracking/include/lqr_pid_trajectory_tracking/: common.h  lqr_pid_trajectory_tracking.h  lqr_pid_trajectory_tracking_controller.h  utils.h
src/control_module/lqr_pid_trajectory_tracking/launch/: lqr_pid_trajectory_tracking_dynamics_coupled_launch.py  lqr_pid_trajectory_tracking_dynamics_launch.py
src/control_module/lqr_pid_trajectory_tracking/src/: lqr_pid_trajectory_tracking.cpp  lqr_pid_trajectory_tracking_controller.cpp  pid_controller.cpp  reference_line.cpp
src/control_module/mpc_trajectory_tracking_dynamics_coupled/: CMakeLists.txt  package.xml
src/control_module/mpc_trajectory_tracking_dynamics_coupled/config/: mpc_parameters_configuration_dynamics_coupled.yaml
src/control_module/mpc_trajectory_tracking_dynamics_coupled/include/mpc_trajectory_tracking_dynamics_coupled/: mpc_controller_trajectory_tracking_dynamics_coupled.h  mpc_trajectory_tracking_dynamics_coupled.h  utils.h
src/control_module/mpc_trajectory_tracking_dynamics_coupled/launch/: mpc_trajectory_tracking_dynamics_coupled_launch.py
src/control_module/mpc_trajectory_tracking_dynamics_coupled/src/: mpc_controller_trajectory_tracking_dynamics_coupled.cpp  mpc_trajectory_tracking_dynamics_coupled.cpp
src/control_module/stanley_pid_trajectory_tracking/: CMakeLists.txt  package.xml
src/control_module/stanley_pid_trajectory_tracking/config/: stanley_pid_parameters_configuration.yaml
src/control_module/stanley_pid_trajectory_tracking/include/stanley_pid_trajectory_tracking/: common.h  stanley_pid_trajectory_tracking.h  stanley_pid_trajectory_tracking_controller.h
src/control_module/stanley_pid_trajectory_tracking/launch/: stanley_pid_trajectory_tracking_dynamics_coupled_launch.py
src/control_module/stanley_pid_trajectory_tracking/msg/: VehicleControl.msg
src/control_module/stanley_pid_trajectory_tracking/src/: pid_controller.cpp  reference_line.cpp  stanley_pid_trajectory_tracking.cpp  stanley_pid_trajectory_tracking_controller.cpp
src/decision_makeing_modules/behavior_decision_interface/: CMakeLists.txt  package.xml
src/decision_makeing_modules/fsm_decision_making/: CMakeLists.txt  package.xml
src/location_modules/integrated_navigation_system/: package.xml  setup.cfg  setup.py
src/path_planning_modules/basic_planner/: CMakeLists.txt  package.xml
src/path_planning_modules/basic_planner/config/: basic_planner.yaml
src/path_planning_modules/basic_planner/include/basic_planner/: basic_planner.h  utils.h
src/path_planning_modules/basic_planner/launch/: basic_planner_launch.py
src/path_planning_modules/basic_planner/src/: basic_planner.cpp
src/path_planning_modules/highway_path_planning_with_prediction/: CMakeLists.txt  package.xml
src/path_planning_modules/highway_path_planning_with_prediction/include/highway_path_planning_with_prediction/: highway_path_planning_with_prediction.h  utils.h
src/path_planning_modules/highway_path_planning_with_prediction/src/: highway_path_planning_with_prediction.cpp
src/path_planning_modules/lattice_planner/: CMakeLists.txt  package.xml
src/perception_modules/lidar_drivers/rslidar_sdk/: CMakeLists.txt  package.xml
src/perception_modules/lidar_drivers/rslidar_sdk/config/: config.yaml
src/perception_modules/objects_msgs/: CMakeLists.txt  package.xml
src/perception_modules/sensor_fusion/: CMakeLists.txt  package.xml
src/perception_modules/sensor_fusion/include/sensor_fusion/: coordinate_transform.h  helpers.h  sensor_fusion.h  waypoints.h
src/perception_modules/sensor_fusion/src/: sensor_fusion.cpp
src/perception_modules/ultrasonic_sensor/: CMakeLists.txt  package.xml
src/perception_modules/ultrasonic_sensor/include/ultrasonic_sensor/: ICANCmd.h
src/perception_modules/ultrasonic_sensor/src/: publisher_member_function.cpp
(+162 files in other folders)
