cmake_minimum_required(VERSION 3.8)
project(matrix_vehicle_chassis_communication)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
# find_package(std_msgs REQUIRED)
find_package(matrix_interfaces REQUIRED)  
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

include_directories(include)
link_directories(${catkin_LIB_DIRS}  lib)
# link_directories("/home/ad/ros2_ws/src/cpp_pubsub/lib")

add_executable(talker_test src/publisher_test.cpp)
ament_target_dependencies(talker_test rclcpp matrix_interfaces)   


add_executable(matrix_chassis_rec_send src/matrix_chassis_rec_send.cpp)
ament_target_dependencies(matrix_chassis_rec_send rclcpp matrix_interfaces)

target_link_libraries(matrix_chassis_rec_send libCanCmd.so)

install(TARGETS
matrix_chassis_rec_send

  talker_test

  # lib/libCanCmd.so
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()
ament_package()
