<?xml version="1.0"?>
<package format="2">
  <name>rslidar_sdk</name>
  <version>1.5.0</version>
  <description>The rslidar_sdk package</description>
  <maintainer email="ron.zheng@robosense.cn">robosense</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>rslidar_msg</depend>
  <export>
     <build_type>ament_cmake</build_type>
  </export>
  
</package>






<!-- <?xml version="1.0"?>
<package>
  <name>rslidar_sdk</name>
  <version>1.5.0</version>
  <description>The rslidar_sdk package</description>
  <maintainer email="ron.zheng@robosense.cn">robosense</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
</package> -->
